--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.0",
     "vue": "^3.4.26",
     "vue-axios": "^3.5.2",
+    "vue-qrcode-reader": "^5.5.6",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
