--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,11 +2,12 @@ events {
     worker_connections 1024;
 }
 
-http {
-    server {
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-    }
-    server_tokens off;
-}
+
+#http {
+#    server {
+#        location / {
+#            try_files $uri $uri/ /index.html;
+#        }
+#    }
+#    server_tokens off;
+#}
