--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       context: .
       dockerfile: Dockerfile
     working_dir: "/usr/share/nginx/html"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+#    volumes:
+#      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     environment:
       - TZ=Asia/Tokyo
     networks:
